test_programs/compile_failure/noirc_frontend_tests_enums_no_such_field_in_match_struct_pattern/src/main.nr

    fn main() {
        let foo = Foo { x: 10, y: 20 };
        match foo {
            Foo { x: _, y: _, z: _ } => {}
        }
    }

    struct Foo {
        x: i32,
        y: Field,
    }
    